--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,18 @@
 {
-  // Name this configuration
   "name": "Codespace for Skills!",
-  // Use the base codespace image
   "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
-
   "remoteUser": "codespace",
-  "overrideCommand": false
+  "overrideCommand": false,
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot"
+      ]
+    },
+    "codespaces": {
+      "openFiles": [
+        "codespace.md"
+      ]
+    }
+  }
 }
